--- a/node1/src/views/layout.hbs
+++ b/node1/src/views/layout.hbs
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>STADVDB MCO2 - Node {{nodeId}} ({{nodeRole}})</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/public/css/styles.css">
 
   <script>
